jujugui/static/gui/src/app/components/added-services-list/_added-services-list.scss
.inspector-view {
    @extend %floating-panel;
    @extend %scroll-children;
    $extra-space: $navbar-height + $panel-space + $environment-header-height + $panel-space + $panel-space;
    position: absolute;
    z-index: 601;
    top: $environment-header-height + ($panel-space * 2) + $navbar-height;
    left: $panel-space;
    width: $left-panel-width;
    max-height: calc(100% - #{$extra-space});

    &__list {
        list-style: none;
        padding-left: 0;
        margin: 0;
    }

    &__list-item {
        @extend %stagger-fade-in;
        padding: 10px 20px;
        cursor: pointer;

        &:focus,
        &:active,
        &:hover {
            background-color: $light-grey;

        }
        &.visibility-toggled .inspector-view__visibility-toggle {
          visibility: visible;
        }
        &:hover .inspector-view__visibility-toggle {
            visibility: visible;
        }
    }

    &__item-icon {
        $size: 24px;
        width: $size;
        height: $size;
        margin-right: 16px;
        vertical-align: middle;
    }

    &__item-name {
        overflow: hidden;
        display: inline-block;
        max-width: 110px;
        text-overflow: ellipsis;
        white-space: nowrap;
        vertical-align: text-bottom;
    }

    &__item-count {
        color: $warm-grey;
    }

    &__visibility-toggle {
        visibility: hidden;
        vertical-align: middle;
        padding: 0 15px 0 0;
    }

    &__status-block {
        float: right;
    }

    &__status {
        &--error {
            @include notification($error);
        }

        &--pending {
            @include notification($pending);
        }

        &--uncommitted {
            @include notification($uncommitted);
        }
    }
}

